Add LLMO API Documentation
